# myengine

./: CMakeLists.txt  main.cpp  run.bat
include/: Mesh.h  Object.h  shaderClass.h
include/Nuclear/: EBO.hpp  Shader.hpp  Texture.hpp
include/Nuclear/FrameBuffer/: FBO.hpp  FBT.hpp  PingPong.hpp
include/Nuclear/Object/: Mesh.hpp  Model.hpp
include/Nuclear/Object/Camera/: Camera.hpp
include/Nuclear/Object/Light/: Light.hpp
include/Nuclear/Verxtex/: VAO.hpp  VBO.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/json-cpp/: CMakeLists.txt
libs/json-cpp/src/: json.cpp
libs/stb/: CMakeLists.txt
resources/shaders/: default.frag.glsl
src/: Camera.cpp  EBO.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  shaderClass.cpp
src/FrameBuffer/: FBO.cpp  FBT.cpp  PingPong.cpp
src/Object/: Mesh.cpp  Model.cpp  Object.cpp
src/Object/Camera/: Camera.cpp
src/Object/Light/: Light.cpp
src/Vertex/: VAO.cpp  VBO.cpp
